reading values from appsettings.json

--- a/CTracker.API/appsettings.json
+++ b/CTracker.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Default": "Server=.\\SQLEXPRESS;Database=CTracker;Trusted_Connection=True;"
   },
+  "App": {
+    "BitvavoKey": "",
+    "BitvavoSecret": "",
+    "Version": "1.0.0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
